--- a/jun_springboot_api/src/main/resources/application-dev.properties
+++ b/jun_springboot_api/src/main/resources/application-dev.properties
@@ -2,6 +2,6 @@
 # 数据源配置，请修改为你项目的实际配置
 # springboot2.0之后 驱动变更
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.1.1.0:3306/data
-spring.datasource.username=java
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/db_api?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
