--- a/jun_springboot_api/pom.xml
+++ b/jun_springboot_api/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.xulp</groupId>
-    <artifactId>spring-boot-base</artifactId>
+    <groupId>com.jun.plugin.api</groupId>
+    <artifactId>jun_springboot_api</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
