--- a/jun_springboot_api/src/main/resources/application.properties
+++ b/jun_springboot_api/src/main/resources/application.properties
@@ -4,3 +4,31 @@ spring.profiles.active=dev
 # 404 交给异常处理器处理
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+spring.application.name=api
+
+
+# Redis 配置
+spring.redis.host=localhost
+# Redis 服务?连接端?
+spring.redis.port=6379
+# 连接池最大连接数（使用负值表示没有限制） 默认 8
+spring.redis.lettuce.pool.max-active=100
+# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+spring.redis.lettuce.pool.max-wait=PT10S
+# 连接池中的最大空闲连接 默认 8
+spring.redis.lettuce.pool.max-idle=30
+# 连接池中的最小空闲连接 默认 0
+spring.redis.lettuce.pool.min-idle=1
+#链接超时时间
+spring.redis.timeout=PT10S
+
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#swagger 开关
+swagger2.enable=true
+#logging配置
+logging.file=${logging.path}/${spring.application.name}.log
+logging.path=logs
+logging.level.com.jun.plugin=debug
+
