--- a/jun_springboot_api/src/main/resources/application.properties
+++ b/jun_springboot_api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 # 404 交给异常处理器处理
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
-spring.application.name=api
+spring.application.name=apiservice
 
 
 # Redis 配置
@@ -21,6 +21,7 @@ spring.redis.lettuce.pool.max-idle=30
 spring.redis.lettuce.pool.min-idle=1
 #链接超时时间
 spring.redis.timeout=PT10S
+session.timeout=30
 
 
 mybatis.mapper-locations=classpath:mapper/*.xml
