--- a/jun_spring_api/pom.xml
+++ b/jun_spring_api/pom.xml
@@ -184,6 +184,15 @@
 		
 	</dependencies>
 	<build>
-		<finalName>Vacomall-Spring-RestApi</finalName>
+		 <plugins>
+			<plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+         </plugins>
 	</build>
 </project>
