--- a/jun_spring_webflux_api/spring-webflux-reactive-rest-api-demo/pom.xml
+++ b/jun_spring_webflux_api/spring-webflux-reactive-rest-api-demo/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>webflux-demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>webflux-demo</name>
