--- a/jun_springboot_api/pom.xml
+++ b/jun_springboot_api/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>mapper</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.2</version>
+        </dependency>
         <!--mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
