--- a/jun_springboot_admin/src/main/resources/generator.properties
+++ b/jun_springboot_admin/src/main/resources/generator.properties
@@ -2,7 +2,7 @@
 
 mainPath=com.jun.plugin
 #\u5305\u540D
-package=com.jun.plugin
+package=com.jun.plugin.bizservice
 #\u4F5C\u8005
 author=wujun
 #Email
