--- a/jun_springboot_admin/pom.xml
+++ b/jun_springboot_admin/pom.xml
@@ -173,6 +173,11 @@
 			<artifactId>easy-captcha</artifactId>
 			<version>${easy-captcha.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.2.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
