--- a/jun_springboot_admin/src/main/resources/application-dev.yml
+++ b/jun_springboot_admin/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 # 开发环境配置
 spring:
-  thymeleaf:
-    cache: false
+#  thymeleaf:
+#    cache: false
   datasource:
     dynamic:
       primary: master #设置默认的数据源或者数据源组,默认值即为master
