--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<module>jun_springboot_api</module>
 		<module>jun_springboot_admin</module>
 		<module>jun_springboot_common</module>
-		
+		<module>jun_springboot_velocity</module>
 	</modules>
 
 	<dependencies>
