--- a/jun_springboot_generator/src/main/resources/generator.properties
+++ b/jun_springboot_generator/src/main/resources/generator.properties
@@ -1,8 +1,8 @@
 #\u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
 
-mainPath=io.renren
+mainPath=com.jun.plugin
 #\u5305\u540D
-package=io.renren.modules
+package=com.jun.plugin.modules
 moduleName=generator
 #\u4F5C\u8005
 author=chenshun
