--- a/jun_springboot_admin_layui/pom.xml
+++ b/jun_springboot_admin_layui/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>jun_springboot_common</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>com.jun.plugin</groupId>
+			<artifactId>jun_code_velocity</artifactId>
+			<version>1.0</version>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
