--- a/jun_springboot_admin_layui/src/main/resources/application.yml
+++ b/jun_springboot_admin_layui/src/main/resources/application.yml
@@ -46,3 +46,12 @@ mybatis-plus:
 #使用代码生成模块时 指定要生成的表存在于哪种数据库，可选值有【mysql、oracle、sqlServer】
 project:
   database: mysql
+
+# 防止XSS攻击
+xss: 
+  # 过滤开关
+  enabled: true
+  # 排除链接（多个用逗号分隔）
+  excludes: 
+  # 匹配链接
+  urlPatterns: /system/*,/tool/*
