--- a/jun_springboot_admin_layui/src/main/resources/application-dev.yml
+++ b/jun_springboot_admin_layui/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
           username: root
           password: 
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://localhost:3306/db_ssm?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2b8
+          url: jdbc:mysql://localhost:3306/db_ssm?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2b8&zeroDateTimeBehavior=convertToNull
         oracle:
           username: root
           password: 
