--- a/jun_springboot_admin_layui/pom.xml
+++ b/jun_springboot_admin_layui/pom.xml
@@ -40,12 +40,16 @@
 			<artifactId>jun_springboot_common</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jun.plugin</groupId>
+		    <artifactId>jun_springboot_snakerflow</artifactId>
+		    <version>1.0</version>
+		</dependency>
 		<!-- <dependency>
 			<groupId>com.jun.plugin</groupId>
 			<artifactId>jun_code_velocity</artifactId>
 			<version>1.0</version>
 		</dependency> -->
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
