--- a/jun_springboot_admin_layui/pom.xml
+++ b/jun_springboot_admin_layui/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.5.RELEASE</version>
+		<version>2.3.7.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.jun.plugin</groupId>
@@ -100,20 +100,22 @@
 			<artifactId>thymeleaf-extras-shiro</artifactId>
 			<version>${thymeleaf-shiro.version}</version>
 		</dependency>
-		<!--数据库持久化 及 插件依赖 -->
+		<!-- 多数据源
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>dynamic-datasource-spring-boot-starter</artifactId>
 			<version>${mybatis-plus-dynamic.version}</version>
-		</dependency>
+		</dependency> 
+		-->
+		<!--数据库持久化 及 插件依赖 -->
 		<dependency>
 			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus</artifactId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<version>${mybatis-plus.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<artifactId>mybatis-plus</artifactId>
 			<version>${mybatis-plus.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-generator -->
@@ -223,18 +225,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency> 
-<!-- 		 配置管理 
+		<!--  配置管理  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+<!--             <optional>true</optional> -->
         </dependency>
          <dependency>
             <groupId>com.github.snakerflow-starter</groupId>
             <artifactId>snakerflow-spring-boot-starter</artifactId>
             <version>1.0.6</version>
         </dependency>
-        -->
+       
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
