--- a/jun_springboot_admin_layui/src/main/resources/application.yml
+++ b/jun_springboot_admin_layui/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
     
 spring:
   profiles:
-    active: dev2
+    active: druid
   mvc:
     throw-exception-if-no-handler-found: true
 #    static-path-pattern: /static/**
