--- a/jun_springboot_admin_layui/src/main/resources/views/admin/config/pear.config.yml
+++ b/jun_springboot_admin_layui/src/main/resources/views/admin/config/pear.config.yml
@@ -1,7 +1,7 @@
 ---
 ## 配置服务端地址
 admin:
-  server: http://localhost:8080
+  server: http://localhost:8081
 ## 网站配置
 logo:
   ## 网站名称
@@ -65,16 +65,7 @@ colors:
 links:
   - icon: "layui-icon layui-icon-website"
     title: "官方网站"
-    href: "http://www.pearadmin.com"
-  - icon: "layui-icon layui-icon-read"
-    title: "开发文档"
-    href: "http://www.pearadmin.com/doc/"
-  - icon: "layui-icon layui-icon-fonts-code"
-    title: "开源地址"
-    href: "https://gitee.com/pear-admin/Pear-Admin-Layui/"
-  - icon: "layui-icon layui-icon-survey"
-    title: "问答社区"
-    href: "http://forum.pearadmin.com/"
+    href: "http://www.baidu.com"
 ## 其他配置
 other:
   ## 主页动画时长
