--- a/jun_springboot_api/pom.xml
+++ b/jun_springboot_api/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <groupId>com.jun.plugin.system</groupId>
     <artifactId>jun_springboot_api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>company-frame</name>
+    <version>1.0</version>
+    <name>jun_springboot_api</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -172,6 +172,21 @@
             <artifactId>commons-codec</artifactId>
             <version>1.13</version>
         </dependency>
+        
+        <!-- JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <!-- Redis-Jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
