--- a/jun_springboot_api/pom.xml
+++ b/jun_springboot_api/pom.xml
@@ -94,11 +94,11 @@
     <version>2.1.3</version>
 </dependency>
 	<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
-<dependency>
+<!-- <dependency>
     <groupId>net.sf.json-lib</groupId>
     <artifactId>json-lib</artifactId>
     <version>2.4</version>
-</dependency>
+</dependency> -->
 	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 <dependency>
     <groupId>com.google.code.gson</groupId>
