--- a/jun_springboot_api/pom.xml
+++ b/jun_springboot_api/pom.xml
@@ -50,7 +50,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-
+<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+<dependency>
+<groupId>org.codehaus.groovy</groupId>
+<artifactId>groovy-all</artifactId>
+<version>2.4.5</version>
+</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
